# bastion-session

./: .gitignore  .goreleaser.yml  AGENTS.md  README.md  go.mod  install.sh  pyproject.toml
.github/testdata/: pull_request.json
.github/workflows/: prerelease-alpha.yml
assets/launchd/: com.remote.bastion-session.plist
assets/systemd/: bastion-session.service
cmd/bastion-session/: main.go
docs/demo/: bastion-session.tape
internal/app/: config.go  config_scope_test.go  current_test.go  oci.go  oci_create_test.go  oci_parse_test.go  ocicontext.go  ocicontext_test.go  operations.go  operations_reuse_test.go  operations_test.go  runtime.go  runtime_test.go  session.go  session_operator_test.go  shortref.go  shortref_test.go  ssh_config.go  target.go  target_test.go  terraform.go  tracker.go  tracker_test.go
internal/cmd/: connect.go  current.go  doctor.go  doctor_test.go  ensure.go  explain.go  list_bastions.go  operator_output_test.go  paths.go  refresh.go  root.go  selection.go  selection_test.go  service.go  service_test.go  session.go  session_operator_test.go  session_ttl.go  session_ttl_test.go  ssh_config.go  ssh_config_test.go  status.go  target.go  target_test.go  track.go  tui.go  use.go  watch.go
src/bastion_session_cli/: __init__.py  config.py  main.py  oci_client.py  runtime.py  session.py  ssh_config.py  terraform.py
tests/: test_cli_version.py  test_cli_watch.py  test_config.py  test_oci_client.py  test_runtime.py  test_runtime_wait.py  test_runtime_watch.py  test_session_cache.py  test_ssh_config.py
