[project]
name = "bastion-session"
version = "0.1.1"
description = "Bastion session manager CLI"
requires-python = ">=3.10"
authors = [
  { name = "Remote Workstation Team" }
]
readme = "README.md"
dependencies = [
  "click>=8.1",
  "rich>=13.7",
  "oci>=2.133.1",
  "python-dateutil>=2.8",
  "pyyaml>=6.0",
  "typing-extensions>=4.8"
]

[project.scripts]
bastion-session = "bastion_session_cli.main:cli"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.bumpver]
current_version = "0.1.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit = false
tag = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
  'version = "{pep440_version}"',
]
"src/bastion_session_cli/__init__.py" = [
  '__version__ = "{pep440_version}"',
]
